--- a/Maatwerk Toets/Maatwerk Toets/Maatwerk Toets.csproj
+++ b/Maatwerk Toets/Maatwerk Toets/Maatwerk Toets.csproj
@@ -44,14 +44,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Administratie.cs" />
+    <Compile Include="Broodje.cs" />
+    <Compile Include="BTWTarief.cs" />
+    <Compile Include="Feestzaal.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frisdrank.cs" />
+    <Compile Include="Inkomsten.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sportzaal.cs" />
+    <Compile Include="Sterkedrank.cs" />
+    <Compile Include="Vergaderruimte.cs" />
+    <Compile Include="Verhuur.cs" />
+    <Compile Include="Verkoop.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
