--- a/Maatwerk Toets/Maatwerk Toets/Maatwerk Toets.csproj
+++ b/Maatwerk Toets/Maatwerk Toets/Maatwerk Toets.csproj
@@ -55,7 +55,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Frisdrank.cs" />
-    <Compile Include="Inkomsten.cs" />
+    <Compile Include="IInkomsten.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sportzaal.cs" />
