Update voor Kevin.

--- a/Maatwerk Toets/Unit Test 1/Unit Test 1.csproj
+++ b/Maatwerk Toets/Unit Test 1/Unit Test 1.csproj
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="IInkomstenTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Maatwerk Toets\Maatwerk Toets.csproj">
+      <Project>{a08b8151-e45c-4f2f-9dc3-9204d4f7554e}</Project>
+      <Name>Maatwerk Toets</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
