Gewerkt aan opdracht 2, 3 en 4
Ze zijn nog niet af.

--- a/PietenToets Herkansing Kevin Kopp/2015-NJ-SE2-BP3H-OO Programma/2015-NJ-SE2-BP3H-OO Programma.csproj
+++ b/PietenToets Herkansing Kevin Kopp/2015-NJ-SE2-BP3H-OO Programma/2015-NJ-SE2-BP3H-OO Programma.csproj
@@ -57,7 +57,7 @@
     </Compile>
     <Compile Include="Gemeente.cs" />
     <Compile Include="KlimPiet.cs" />
-    <Compile Include="KookPiet.cs" />
+    <Compile Include="GooiPiet.cs" />
     <Compile Include="OngeldigePietException.cs" />
     <Compile Include="PakjesPiet.cs" />
     <Compile Include="Piet.cs" />
